--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Geolonia PWA",
-  "name": "Geolonia PWA",
+  "short_name": "CHUNITHM設置店舗マップ",
+  "name": "CHUNITHM マップ",
   "icons": [
     {
       "src": "manifest-icon-192.maskable.png",
