--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron:  '15 7 * * *'
-    # 毎日7時15分に実行
+    - cron:  '15 22 * * *'
+    # 毎日7時15分(JST)に実行
 
 permissions:
   contents: write
