--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,17 @@ jobs:
     - name: Move data.json to public directory
       run: mv data.json public/
       
+    - name: Set Last Update
+      id: set_last_update
+      run: |
+        last_update=$(python update.py)
+        echo "LAST_UPDATE=${last_update}" >> $GITHUB_ENV
+      shell: bash
+
+    - name: Use Last Update
+      run: |
+        echo "Last Update: $LAST_UPDATE"
+        
     - name: Commit changes
       run: |
 
@@ -47,7 +58,7 @@ jobs:
           echo "No changes to commit."
         else
           git add public/data.json
-          git commit -m "データを更新"
+          git commit -m "データを更新 ($LAST_UPDATE")"
           git push origin master
         fi
 
