--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron:  '15 22 * * *'
+    - cron:  '35 22 * * *'
     # 毎日7時15分(JST)に実行
 
 permissions:
@@ -32,7 +32,7 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run Python
-      run: python uni_get.py
+      run: python mai_get.py
 
     - name: Move data.json to public directory
       run: mv data.json public/
