--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
-  "title": "CHUNITHM設置店舗マップ",
-  "description": "CHUNITHM設置店舗マップです",
+  "title": "maimai設置店舗マップ",
+  "description": "maimai設置店舗マップです",
   "form_url": "",
   "logo_image_url": "https://geoloniamaps.github.io/pwamap/icon-pwamap.svg",
   "background_image_url": "https://geoloniamaps.github.io/pwamap/geolonia_bgimage_1920_1080.png",
