--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Move data.json to public directory
       run: |
         mv data.json public/
-        mv last_update.json public/
+        mv src/last_update.json public/
         
     - name: Commit changes
       run: |
